force-app/main/default/objects/BatchGroup__c/BatchGroup__c.object-meta.xml
<CustomObject>
    <label>Batch Group</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>