force-app/main/default/objects/BatchGroup__c/fields/CronText__c.field-meta.xml
<CustomField>
    <fullName>CronText__c</fullName>
    <description>스케줄 실행 시간</description>
    <label>Cron Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>